--- a/index.htm
+++ b/index.htm
@@ -4,24 +4,24 @@
     <title>Virtual Tour</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="user-scalable=no, initial-scale=0.5, width=device-width, viewport-fit=cover" id="metaViewport"/>
-    <link rel="preload" href="script.js?v=1593412835184" as="script"/>
-	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/r/3/0_0.jpg?v=1593412835184" as="image"/>
-	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/l/3/0_0.jpg?v=1593412835184" as="image"/>
-	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/u/3/0_0.jpg?v=1593412835184" as="image"/>
-	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/d/3/0_0.jpg?v=1593412835184" as="image"/>
-	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/f/3/0_0.jpg?v=1593412835184" as="image"/>
-	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/b/3/0_0.jpg?v=1593412835184" as="image"/>
-	<link rel="preload" href="locale/en.txt?v=1593412835184" as="fetch" crossorigin="anonymous"/>
-	<script src="https://remote.3dvista.com/lib/tdvremote.js?v=1593412835184" type="text/javascript"></script>
+    <link rel="preload" href="script.js?v=1593420667822" as="script"/>
+	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/r/3/0_0.jpg?v=1593420667822" as="image"/>
+	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/l/3/0_0.jpg?v=1593420667822" as="image"/>
+	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/u/3/0_0.jpg?v=1593420667822" as="image"/>
+	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/d/3/0_0.jpg?v=1593420667822" as="image"/>
+	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/f/3/0_0.jpg?v=1593420667822" as="image"/>
+	<link rel="preload" href="media/panorama_C2768042_C8D3_BC48_41D5_6C538580BECC_0/b/3/0_0.jpg?v=1593420667822" as="image"/>
+	<link rel="preload" href="locale/en.txt?v=1593420667822" as="fetch" crossorigin="anonymous"/>
+	<script src="https://remote.3dvista.com/lib/tdvremote.js?v=1593420667822" type="text/javascript"></script>
 	<meta name="description" content="Virtual Tour"/>
 	<meta name="theme-color" content="#14BF98"/>
-    <script src="lib/tdvplayer.js?v=1593412835184"></script>
-    <script src="script.js?v=1593412835184"></script>
+    <script src="lib/tdvplayer.js?v=1593420667822"></script>
+    <script src="script.js?v=1593420667822"></script>
     <script type="text/javascript">
         (function()
         {
             var deviceType = TDV.PlayerAPI.mobile ? 'mobile' : 'general';
-            var devicesUrl = {"mobile":{"landscape":"script_general.js?v=1593412835184","portrait":"script_mobile.js?v=1593412835184"},"general":"script_general.js?v=1593412835184"};
+            var devicesUrl = {"general":"script_general.js?v=1593420667822","mobile":{"landscape":"script_general.js?v=1593420667822","portrait":"script_mobile.js?v=1593420667822"}};
             var url = deviceType in devicesUrl ? devicesUrl[deviceType] : devicesUrl['general'];
             if(typeof url == "object") {
                 var orient = TDV.PlayerAPI.getOrientation();
@@ -46,11 +46,11 @@
 
             var settings = new TDV.PlayerSettings();
             settings.set(TDV.PlayerSettings.CONTAINER, document.getElementById('viewer'));
-            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1593412835184');
-            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1593412835184');
-            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1593412835184');
+            settings.set(TDV.PlayerSettings.WEBVR_POLYFILL_URL, 'lib/WebVRPolyfill.js?v=1593420667822');
+            settings.set(TDV.PlayerSettings.HLS_URL, 'lib/Hls.js?v=1593420667822');
+            settings.set(TDV.PlayerSettings.QUERY_STRING_PARAMETERS, 'v=1593420667822');
 
-            var devicesUrl = {"mobile":{"landscape":"script_general.js?v=1593412835184","portrait":"script_mobile.js?v=1593412835184"},"general":"script_general.js?v=1593412835184"};
+            var devicesUrl = {"general":"script_general.js?v=1593420667822","mobile":{"landscape":"script_general.js?v=1593420667822","portrait":"script_mobile.js?v=1593420667822"}};
 
             tour = new TDV.Tour(settings, devicesUrl);
             tour.bind(TDV.Tour.EVENT_TOUR_INITIALIZED, onVirtualTourInit);
@@ -290,27 +290,10 @@
         #viewer { background-color: #14BF98; z-index:1; position:absolute; width: 100%; height: 100%; top: 0; }
         
     </style>
-    <link rel="stylesheet" href="fonts.css?v=1593412835184">
+    <link rel="stylesheet" href="fonts.css?v=1593420667822">
 </head>
 <body>
     
     <div id="viewer"></div>
-
-    <!-- Added Dialogflow VoiceBot -->
-
-    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
-<df-messenger
-  chat-icon="b93155c1-7c1a-490c-9cdc-11e9fa715ae5_x.png"
-  intent="WELCOME"
-  chat-title="RahejaVoiceBot"
-  agent-id="677ffddf-d359-4182-b7ca-3922cfc58ec2"
-  language-code="en-in"
-></df-messenger>
-
-    <!-- Till here -->
-
-
-
-
 </body>
 </html>
