added dialogflow voicebot

--- a/index.htm
+++ b/index.htm
@@ -295,5 +295,18 @@
 <body>
     
     <div id="viewer"></div>
+
+    <!-- Added Dialogflow VoiceBot  --> 
+    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+<df-messenger
+  chat-icon="8e4fd96f-087c-4c1e-9594-f2adeb8eeae0_x.png"
+  intent="WELCOME"
+  chat-title="RahejaVoiceBot"
+  agent-id="677ffddf-d359-4182-b7ca-3922cfc58ec2"
+  language-code="en-in"
+></df-messenger>
+
+<!-- till here -->
+
 </body>
 </html>
