change language en-in to en

--- a/index.htm
+++ b/index.htm
@@ -304,7 +304,7 @@
   intent="WELCOME"
   chat-title="RahejaVoiceBot"
   agent-id="677ffddf-d359-4182-b7ca-3922cfc58ec2"
-  language-code="en-in"
+  language-code="en"
 ></df-messenger>
 
 <!-- till here -->
