disabled dialogflow messenger

--- a/index.htm
+++ b/index.htm
@@ -298,14 +298,14 @@
 
     <!-- Added Dialogflow VoiceBot  -->
 
-    <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
+    <!-- <script src="https://www.gstatic.com/dialogflow-console/fast/messenger/bootstrap.js?v=1"></script>
 <df-messenger
   chat-icon="8e4fd96f-087c-4c1e-9594-f2adeb8eeae0_x.png"
   intent="WELCOME"
   chat-title="RahejaVoiceBot"
   agent-id="677ffddf-d359-4182-b7ca-3922cfc58ec2"
   language-code="en"
-></df-messenger>
+></df-messenger> -->
 
 
 <!-- This site is converting visitors into subscribers and customers with https://respond.io --><script id="respondio__widget" src="https://cdn.respond.io/webchat/widget/widget.js?cId=4debe78bed787a2a1d868e83ee8ec817737c507f7c2af2492d17b93500af6698"></script><!-- https://respond.io -->
